--- a/pages/templates/title.html
+++ b/pages/templates/title.html
@@ -1,5 +1,11 @@
-<div class="title-box">
-    <img class="title-img" src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fm3RNd%2FbtrRuV0OPUU%2F1AuohJuprY9hKbUcTIvmU1%2Fimg.png" width="150">
-    <br><br>
-    <h1 class="title-text"><b>Welcome To Our Dream!</b></h1>
+<div class="header-wrap">
+    <div class="profile-menu">
+        <button onclick="loadMyProfile()">내 프로필</button>
+        <button onclick="logOut()">로그아웃</button>
+    </div>
+    <div class="title-box">
+        <img class="title-img" src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fm3RNd%2FbtrRuV0OPUU%2F1AuohJuprY9hKbUcTIvmU1%2Fimg.png" width="150">
+        <br><br>
+        <h1 class="title-text"><b>Welcome To Our Dream!</b></h1>
+    </div>
 </div>
