--- a/style/style.css
+++ b/style/style.css
@@ -107,6 +107,11 @@ html {
         height: 70%;
         margin-left: 70px;
     }
+
+    .profile-menu {
+        position: fixed;
+        top: 5%;
+    }
 }
 
 @media (width >=500px) and (width < 1000px) {
@@ -114,10 +119,23 @@ html {
     .title {
         width: 100%;
         height: 30%;
-        max-height: 350px;
+        max-height: 250;
         flex-direction: row;
         padding: 0px;
 
+    }
+
+    .header-wrap {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: top;
+        justify-content: stretch;
+
+        width: 85%;
+    }
+
+    .title-box {
+        margin: 0px auto 0px 0px;
     }
 }
 
@@ -131,6 +149,33 @@ html {
         height: 15%;
         flex-direction: row;
         padding: 0px;
+    }
+
+    .header-wrap {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: stretch;
+
+        width: 90%;
+    }
+
+    .title-box {
+        margin: auto;
+        display: flex;
+    }
+
+    .title-text {
+        display: flex;
+        justify-content: center;
+        text-align: left;
+    }
+
+    .profile-menu {
+        margin: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: right;
     }
 
     .wrap-inner {
