--- a/style/style.css
+++ b/style/style.css
@@ -56,7 +56,7 @@ html {
 }
 
 .wrap-inner {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.1);
     overflow: scroll;
     overflow-x: hidden;
     overflow: auto;
@@ -88,7 +88,8 @@ html {
     .title {
         width: 25%;
         height: 100vh;
-        background-color: rgba( 0, 0, 0, 0.2);
+        background-color: rgba( 0, 0, 0, 0.4);
+        color: violet;
         flex-direction: column;
         padding: 0px 30px;
     }
