--- a/style/register.css
+++ b/style/register.css
@@ -43,7 +43,7 @@ label {
   top: 0px;
   left: 50%;
   transform: translateX(-50%);
-  background: #8BC34A;
+  background: #BA55D3;
   transition: ease .6s;
 }
 
@@ -69,6 +69,6 @@ label {
 }
 
 button:hover {
-  background: #8BC34A;
+  background: #BA55D3;
   color: #ffffff;
 }
