--- a/pages/templates/myprofile.html
+++ b/pages/templates/myprofile.html
@@ -2,7 +2,7 @@
     <div class="user-profile-box">
         <div class="profile-upper">
             <div class="profile-image">
-                <img src="../img/default-profile.png" width="300">
+                <img src="../img/default-profile.png">
             </div>
             <div class="profile-title">
                 <h1>이름</h1>
