--- a/pages/templates/lostaccount.html
+++ b/pages/templates/lostaccount.html
@@ -1,4 +1,4 @@
-<div class="lost-account-box">
+<!-- <div class="lost-account-box">
     <h3>계정 복구하기</h3>
     <p>이메일로 찾기</p>
     <input type="email">
@@ -7,4 +7,27 @@
     <input type="number">
     <button>찾기</button>
 
-</div>
+</div> -->
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<div class="lost-account-box">
+    <div>
+    <p class="login-label-txt">이메일로 찾기</p>
+        <input type="email">
+        <div class="line-box">
+        <div class="line"></div>
+        </div>
+    </div>
+    
+    <div>
+        <p class="login-label-txt">전화번호로 찾기</p>
+        <input type="number">
+        <div class="line-box">
+        <div class="line"></div>
+        </div>
+    </div>
+
+    <br><br>
+    <button>찾기</button>
