--- a/pages/templates/userprofile.html
+++ b/pages/templates/userprofile.html
@@ -5,12 +5,12 @@
                 <img src="../img/default-profile.png">
             </div>
             <div class="profile-title">
-                <h1>이름</h1>
-                <p>유저네임</p>
+                <h1 id="user-name">이름</h1>
+                <p id="user-tag">유저네임</p>
             </div>
         </div>
         <div class="profile-desc">
-            <p>프로필에 대한 설명</p>
+            <p id="user-motd">프로필에 대한 설명</p>
         </div>
     </div>
 
