--- a/pages/templates/myprofile.html
+++ b/pages/templates/myprofile.html
@@ -5,14 +5,14 @@
                 <img src="../img/default-profile.png">
             </div>
             <div class="profile-title">
-                <h1>이름</h1>
+                <h1 id="user-name">이름</h1>
                 <button>변경</button>
-                <p>유저네임</p>
+                <p id="user-tag">유저네임</p>
                 <button>변경</button>
             </div>
         </div>
         <div class="profile-desc">
-            <p>프로필에 대한 설명</p>
+            <p id="user-motd">프로필에 대한 설명</p>
             <button>변경</button>
         </div>
     </div>
