--- a/style/style.css
+++ b/style/style.css
@@ -77,7 +77,7 @@ html {
     margin: 0px!important;
     padding: 20px 0px 15px;
     text-align: center;
-    background-color: gray;
+    background-color: rgba( 0, 0, 0, 0.4);
 }
 
 .footer-text {
