--- a/pages/templates/register.html
+++ b/pages/templates/register.html
@@ -15,7 +15,7 @@
 
     <div>
         <p class="register-label-txt">ENTER YOUR NAME</p>
-        <input type="text" class="register-input">
+        <input type="text" class="register-input" id = "signUpName">
         <div class="line-box">
         <div class="line"></div>
         </div>
