이메일입력으로 비밀번호찾기

--- a/pages/templates/lostaccount.html
+++ b/pages/templates/lostaccount.html
@@ -14,8 +14,8 @@
 
 <div class="lost-account-box">
     <div>
-    <p class="login-label-txt">이메일로 찾기</p>
-        <input type="email">
+    <p class="login-label-txt" >이메일로 찾기</p>
+        <input type="email" id="resetEmail">
         <div class="line-box">
         <div class="line"></div>
         </div>
@@ -30,4 +30,4 @@
     </div>
 
     <br><br>
-    <button>찾기</button>
+    <button onclick="resetBtn()">찾기</button>
