--- a/style/style.css
+++ b/style/style.css
@@ -112,7 +112,7 @@ html {
     .wrap-inner {
         max-width: 1300px;
         width: 50vw;
-        height: 70%;
+        height: 70vh;
         margin-left: 70px;
     }
 
