--- a/pages/templates/myprofile.html
+++ b/pages/templates/myprofile.html
@@ -3,6 +3,7 @@
         <div class="profile-upper">
             <div class="profile-image">
                 <img id="user-profile-image" class="profileimage" src="../img/default-profile.png">
+                <input onchange="onFileChange(event)" id="imgInput" type="file" accept="images/*" />
             </div>
             <div class="profile-title">
                 <h1 id="user-name">이름</h1>
