--- a/style/style.css
+++ b/style/style.css
@@ -33,7 +33,7 @@
     bottom: 0;
     background-image: url('../img/aespa.png');
     background-size: cover;
-    filter: blur(4px);
+    filter: blur(8px);
     z-index: -1;
     content: "";
 }
@@ -63,7 +63,7 @@ html {
 }
 
 .wrap-inner {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.25);
     overflow: scroll;
     overflow-x: hidden;
     overflow: auto;
@@ -126,8 +126,7 @@ html {
 
     .title {
         width: 100%;
-        height: 30%;
-        max-height: 250;
+        height: 250px;
         flex-direction: row;
         padding: 0px;
 
@@ -147,7 +146,7 @@ html {
     }
 
     .wrap-inner {
-        height: calc(100vh - 309px);
+        height: calc(100vh - 308px);
     }
 }
 
