--- a/style/newsfeed.css
+++ b/style/newsfeed.css
@@ -2,6 +2,28 @@
     margin: 70px 40px 70px 40px;
 }
 
+.post {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: stretch;
+}
+
+.post-thumbnail-container {
+    max-width: 30%;
+    max-height: 156px;
+}
+
+.post-thumbnail {
+    margin: auto;
+    width: 85%;
+    height: 85%;
+}
+
+.post-content {
+    max-width: 70%;
+}
+
 .post-title {
     margin-bottom: 0px;
 }
