--- a/style/newsfeed.css
+++ b/style/newsfeed.css
@@ -22,16 +22,16 @@
 
 .post-content {
     max-width: 70%;
-    overflow: auto;
+    overflow: hidden;
+    overflow-wrap: break-word;
 }
 
 .post-content-text {
     max-width: 70%;
-    word-wrap: break-word;
-
 }
 
 .post-content-pre {
+    max-width: 100%;
     word-wrap: break-word;
 }
 
