--- a/style/newsfeed.css
+++ b/style/newsfeed.css
@@ -8,9 +8,16 @@
     align-items: center;
     justify-content: stretch;
 }
+@media (width < 500px) {
+    .post {
+        flex-direction: column;
+    }
+}
+
 
 .post-thumbnail-container {
     max-width: 30%;
+    max-width: 156px;
     max-height: 156px;
 }
 
@@ -18,6 +25,8 @@
     margin: auto;
     width: 85%;
     height: 85%;
+    max-height: 156px;
+    max-width: 156px;
 }
 
 .post-content {
