--- a/style/newsfeed.css
+++ b/style/newsfeed.css
@@ -23,14 +23,13 @@
 
 .post-thumbnail {
     margin: auto;
-    width: 85%;
-    height: 85%;
-    max-height: 156px;
-    max-width: 156px;
+    height: 156px;
+    width: 156px;
 }
 
 .post-content {
-    max-width: 70%;
+    margin: 10px;
+    max-width: auto;
     overflow: hidden;
     overflow-wrap: break-word;
 }
@@ -42,6 +41,15 @@
 .post-content-pre {
     max-width: 100%;
     word-wrap: break-word;
+}
+
+@media (width < 500px) {
+    .post-content {
+        width: 90vw
+    }
+    .post-content-text, .post-content-pre {
+        max-width: 90vw;
+    }
 }
 
 .post-title {
