--- a/pages/templates/userprofile.html
+++ b/pages/templates/userprofile.html
@@ -6,7 +6,7 @@
             </div>
             <div class="profile-title">
                 <h1 id="user-name">이름</h1>
-                <p id="user-tag">유저네임</p>
+                <p id="user-email">이메일</p>
             </div>
         </div>
         <div class="profile-desc">
