--- a/pages/templates/myprofile.html
+++ b/pages/templates/myprofile.html
@@ -19,7 +19,7 @@
         <div class="profile-desc">
             <p id="user-motd">프로필에 대한 설명</p>
             <div id="edit-user-motd-button-container">
-                <button>변경</button>
+                <button onclick="startMotdChange()">변경</button>
             </div>
         </div>
     </div>
