--- a/style/newsfeed.css
+++ b/style/newsfeed.css
@@ -14,6 +14,10 @@
     }
 }
 
+.write-new-post-button {
+    margin: 40px 40px 0px;
+    width: 10%;
+}
 
 .post-thumbnail-container {
     max-width: 30%;
