--- a/pages/templates/writepost.html
+++ b/pages/templates/writepost.html
@@ -1,6 +1,5 @@
-<center>
-    <div class="post">
-    <div class="post-content">
+ <div class="write-post">
+    <div class="write-post-content">
         <h3>글쓰기✏</h3>
         
         <input type="text" id="write-post-title" placeholder="글 제목"><br><br>
@@ -9,6 +8,4 @@
         <button id="write-post-button" onclick="writePost();loadNewsfeed()">작성하기</button>
         
     </div>
-
 </div>
-</center>
