--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
 }
 /* 웹 폰트 적용 */
 
-.post-content-pre, button {
+.post-content-pre, button, input, textarea {
     font-family: 'LeferiPoint-WhiteObliqueA';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/LeferiPoint-WhiteObliqueA.woff') format('woff');
     font-weight: normal;
@@ -84,6 +84,8 @@ html {
     margin: 0px;
 }
 
+/* buttons */
+
 button {
     border: none;
     border-radius: 3px;;
@@ -99,6 +101,19 @@ button:hover {
     color: white;
   }
   
+/* inputs */
+
+input, textarea {
+    border: none;
+    border-radius: 3px;
+    
+    padding: 6px 8px 3px;
+}
+
+input:focus, textarea:focus {
+    border: 2px solid;
+    border-color: #BA55D3;
+}
 
 
 
