--- a/pages/templates/editpost.html
+++ b/pages/templates/editpost.html
@@ -5,6 +5,8 @@
             <!-- TODO 이전 글 컨텐츠 복사 -->
             <input type="text" id="edit-post-title" placeholder="글 제목">
             <input type="text" id="edit-post-content" placeholder="글 내용">
+            <input type="file" id="edit-post-file" onchange="fileControl(event)" placeholder="첨부파일" multiple/>
+            <img src="#" id="posting-img">
             <div id="edit-button-container"></div>
             <!-- 수정 완료 버튼은 script.js에 있습니다. class="edit-post-button" -->
         </div>
