--- a/pages/templates/writepost.html
+++ b/pages/templates/writepost.html
@@ -1,11 +1,16 @@
- <div class="write-post">
-    <div class="write-post-content">
+<center>
+    <div class="post">
+    <div class="post-content">
         <h3>글쓰기✏</h3>
         
         <input type="text" id="write-post-title" placeholder="글 제목"><br><br>
         <textarea name="text" id="write-post-content" placeholder="글 내용"></textarea>
+        <img src="#" id ="posting-img">
+        <input type="file" id="write-post-file" onchange="fileControl(event)" placeholder="첨부파일" multiple/>
         <br>
         <button id="write-post-button" onclick="writePost();loadNewsfeed()">작성하기</button>
         
     </div>
+
 </div>
+</center>
