--- a/pages/templates/myprofile.html
+++ b/pages/templates/myprofile.html
@@ -18,6 +18,7 @@
         </div>
         <div class="profile-desc">
             <p id="user-motd">프로필에 대한 설명</p>
+            <p id="user-mbti">제 MBTI는 OOOO입니다</p>
             <div id="edit-user-motd-button-container">
                 <button onclick="startMotdChange()">변경</button>
             </div>
