--- a/style/landing.css
+++ b/style/landing.css
@@ -139,38 +139,38 @@ a span:nth-child(4){
 
 .buttons {
     margin: 10% 20% 0% 0%;
-    text-align: center;
+    text-align: center!important;
 }
 
 .btn-hover {
-    width: 120px;
-    font-size: 12px;
-    font-weight: 300;
-    color: #fff;
-    cursor: pointer;
-    margin: 10px;
-    height: 30px;
-    text-align:center;
-    border: none;
-    background-size: 300% 100%;
+    width: 120px!important;
+    font-size: 12px!important;
+    font-weight: 300!important;
+    color: #fff!important;
+    cursor: pointer!important;
+    margin: 10px!important;
+    height: 30px!important;
+    text-align:center!important;
+    border: none!important;
+    background-size: 300% 100%!important;
 
-    border-radius: 50px;
-    moz-transition: all .4s ease-in-out;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
+    border-radius: 50px!important;
+    moz-transition: all .4s ease-in-out!important;
+    -o-transition: all .4s ease-in-out!important;
+    -webkit-transition: all .4s ease-in-out!important;
+    transition: all .4s ease-in-out!important;
 }
 
 .btn-hover:hover {
-    background-position: 100% 0;
-    moz-transition: all .4s ease-in-out;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
+    background-position: 100% 0!important;
+    moz-transition: all .4s ease-in-out!important;
+    -o-transition: all .4s ease-in-out!important;
+    -webkit-transition: all .4s ease-in-out!important;
+    transition: all .4s ease-in-out!important;
 }
 
 .btn-hover:focus {
-    outline: none;
+    outline: none!important;
 }
 
 .btn-hover.color-1 {
