--- a/style/viewpost.css
+++ b/style/viewpost.css
@@ -42,9 +42,14 @@
     justify-content: left;
 }
 
-.post-creator-profile, .comment-creator-profile {
+.post-creator-profile{
     width: 6%;
     height: 6%;
+}
+
+.comment-creator-profile {
+    width: 10%;
+    height: 10%;
 }
 
 .post-creator-name, .comment-creator-name {
