--- a/pages/templates/userprofile.html
+++ b/pages/templates/userprofile.html
@@ -11,6 +11,7 @@
         </div>
         <div class="profile-desc">
             <p id="user-motd">프로필에 대한 설명</p>
+            <p id="user-mbti">프로필에 대한 설명</p>
         </div>
     </div>
 
