--- a/pages/templates/myprofile.html
+++ b/pages/templates/myprofile.html
@@ -22,6 +22,9 @@
             <div id="edit-user-motd-button-container">
                 <button onclick="startMotdChange()">변경</button>
             </div>
+            <div id="edit-user-mbti-button-container">
+                <button onclick="startMBTIChange()">변경</button>
+            </div>
         </div>
     </div>
 
