--- a/pages/templates/myprofile.html
+++ b/pages/templates/myprofile.html
@@ -1,29 +1,33 @@
-<div class="user-profile">
+<div class="user-profile">image
     <div class="user-profile-box">
         <div class="profile-upper">
-            <div class="profile-image">
-                <img id="user-profile-image" class="profileimage" src="../img/default-profile.png">
-                <input onchange="onFileChange(event)" id="imgInput" type="file" accept="images/*" />
-            </div>
-            <div class="profile-title">
-                <h1 id="user-name">이름</h1>
-                <div id="edit-user-name-button-container">
-                    <button onclick="startDisplayNameChange()">변경</button>
+          
+                <div class="profile-image">
+                    <img id="user-profile-image" class="profileimage" src="../img/default-profile.png">
+                    <input onchange="onFileChange(event)" id="imgInput" type="file" accept="images/*" />
+                    <button id="profileBtn" onclick="changeProfile()" >사진변경</button>
                 </div>
-                <p id="user-email">이메일</p>
-                <div id="edit-user-password-button-container">
-                    <button onclick="startPasswordChange()">비밀번호 변경</button>
+       
+                <div class="profile-title">
+                    <h1 id="user-name">이름</h1>
+                    <div id="edit-user-name-button-container">
+                        <button onclick="startDisplayNameChange()">변경</button>
+                    </div>
+                    <p id="user-email">이메일</p>
+                    <div id="edit-user-password-button-container">
+                        <button onclick="startPasswordChange()">비밀번호 변경</button>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="profile-desc">
-            <p id="user-mbti">제 MBTI는 OOOO입니다</p>
-            <div id="edit-user-mbti-button-container">
-                <button onclick="startMBTIChange()">변경</button>
-            </div>
-            <p id="user-motd">프로필에 대한 설명</p>
-            <div id="edit-user-motd-button-container">
-                <button onclick="startMotdChange()">변경</button>
+            <div class="profile-desc">
+                <p id="user-mbti">제 MBTI는 OOOO입니다</p>
+                <div id="edit-user-mbti-button-container">
+                    <button onclick="startMBTIChange()">변경</button>
+                </div>
+                <p id="user-motd">프로필에 대한 설명</p>
+                <div id="edit-user-motd-button-container">
+                    <button onclick="startMotdChange()">변경</button>
+            
             </div>
         </div>
     </div>
