--- a/pages/templates/title.html
+++ b/pages/templates/title.html
@@ -1,7 +1,11 @@
 <div class="header-wrap">
     <div class="profile-menu">
+        <button onclick="loadWritePost()">글쓰기</button>
         <button onclick="loadMyProfile()">내 프로필</button>
         <button onclick="logOut()">로그아웃</button>
+        <img onclick="loadWritePost()" src="img/write-post.png">
+        <img onclick="loadMyProfile()" src="img/my-profile.png">
+        <img onclick="logOut()" src="img/logout.png">
     </div>
     <div class="title-box" onclick="loadNewsfeedFromTitleClick()">
         <img class="title-img" src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fm3RNd%2FbtrRuV0OPUU%2F1AuohJuprY9hKbUcTIvmU1%2Fimg.png" width="150">
