--- a/pages/templates/newsfeed.html
+++ b/pages/templates/newsfeed.html
@@ -1,2 +1,3 @@
-<button class="write-new-post-button" onclick="newWritePost()" >글쓰기</button> <!-- 글쓰기로 가는 버튼 -->
+<!-- 글쓰기로 가는 버튼 -->
+<!-- <button class="write-new-post-button" onclick="newWritePost()" >글쓰기</button> -->
 <div class="news-feed" id="news-feed"></div>
