--- a/pages/templates/title.html
+++ b/pages/templates/title.html
@@ -1,10 +1,10 @@
 <div class="header-wrap">
     <div class="profile-menu">
-        <button onclick="loadWritePost()">글쓰기</button>
-        <button onclick="loadMyProfile()">내 프로필</button>
+        <button onclick="checkHash('#loadWritePost')">글쓰기</button>
+        <button onclick="checkHash('#loadMyProfile')">내 프로필</button>
         <button onclick="logOut()">로그아웃</button>
-        <img onclick="loadWritePost()" src="img/write-post.png">
-        <img onclick="loadMyProfile()" src="img/my-profile.png">
+        <img onclick="checkHash('#loadWritePost')" src="img/write-post.png">
+        <img onclick="checkHash('#loadMyProfile')" src="img/my-profile.png">
         <img onclick="logOut()" src="img/logout.png">
     </div>
     <div class="title-box" onclick="loadNewsfeedFromTitleClick()">
