--- a/pages/templates/userprofile.html
+++ b/pages/templates/userprofile.html
@@ -2,16 +2,15 @@
     <div class="user-profile-box">
         <div class="profile-upper">
             <div class="profile-image">
-                <img id="user-profile-image" src="../img/default-profile.png">
+                <img class="user-profile-image" id="user-profile-image" src="../img/default-profile.png">
             </div>
             <div class="profile-title">
                 <h1 id="user-name">이름</h1>
-                <p id="user-email">이메일</p>
             </div>
         </div>
         <div class="profile-desc">
-            <p id="user-motd">프로필에 대한 설명</p>
             <p id="user-mbti">프로필에 대한 설명</p>
+            <p id="user-motd">프로필에 대한 설명</p>
         </div>
     </div>
 
