--- a/style/viewpost.css
+++ b/style/viewpost.css
@@ -8,7 +8,7 @@
 
     .post-content {
         width: 66.25%;
-        margin: 2.5% 1.25% 2.5% 2.5%;
+        margin: 2.5% 1.25% auto 2.5%;
     }
 
     .comments {
@@ -32,6 +32,10 @@
     .post-content, .comments {
         width: 95%;
         margin: 2.5%;
+    }
+
+    .write-comment-button {
+        margin-bottom: 15px;
     }
 }
 
