--- a/style/myprofile.css
+++ b/style/myprofile.css
@@ -1,3 +1,8 @@
+.profile-upper {
+    display: flex;
+    flex-direction: row;
+}
+
 .user-profile {
     margin: 40px 40px 40px 40px;
 }
@@ -18,6 +23,30 @@
     overflow: hidden;
 
     object-fit: cover;
+}
+
+@media (width < 500px) {
+    .user-profile-box {
+        padding-bottom: 20px;
+        margin-bottom: 20px;
+        border-bottom: solid 1px;
+        border-color: white;
+    }
+
+    .profile-upper {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .user-profile-image {
+        height: 250px;
+        width: 250px;
+    }
+
+    .profile-title {
+        margin-right: auto;
+    }
 }
 
 .edit-profile-image-area {
