--- a/presentation/style/presentation.css
+++ b/presentation/style/presentation.css
@@ -7,12 +7,13 @@ body {
     height: 9vh;
     margin: 0px;
 
-    padding: 5px 10px;
-
     color: white;
     background-color: black;
 
     position: fixed;
+
+    top: 0px;
+    left: 0px;
 
     display: flex;
     flex-direction: row;
@@ -29,9 +30,8 @@ body {
     display: none;
 }
 
-
 .infinity-logo {
-    height: 100%;
+    height: calc(9vh - 10px);
 }
 
 .infinity-title {
@@ -41,7 +41,6 @@ body {
 .nav-actual {
     margin-left: auto;
 }
-
 
 .wrap {
     width: 100vw;
@@ -54,5 +53,19 @@ body {
     height: 91vh;
 
     margin: 0px;
-    padding: 2vh 6wh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.content-inner {
+    width: 70vw;
+    max-width: 3000px;
+
+    height: 89vh;
+
+    margin: 1vh auto;
+
+    background-color: rgba(0, 0, 0, 0.2);
 }
