--- a/presentation/style/presentation.css
+++ b/presentation/style/presentation.css
@@ -109,47 +109,86 @@ body {
     /* background-color: rgba(0, 0, 0, 0.2); */
 }
 
-/* INTRO */
-
-.introduction-content-inner {
-    display: flex;
-    flex-direction: row;
-}
-
-.introduction-left {
-    margin: auto;
-    margin-left: 0px;
-}
-
-.kwangya-title {
-    font-size: 50px;
-}
-
-.kwangya-text {
-    font-size: 22px;
-}
-
-.kwangya-button {
+.content-button {
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
     border-radius: 0.5vh;
 
     font-size: 18px;
 
     padding: 5px 25px;
+    margin-bottom: 33.5px;
 
     transition: linear 0.3s;
 }
 
-.kwangya-button:hover {
+.content-button:hover {
     background: linear-gradient(-70deg, aqua, pink);
 }
 
-.introduction-right {
+.content-title {
+    font-size: 50px;
+    margin-bottom: 5px;
+}
+
+.content-text {
+    margin-top: 5px;
+    margin-bottom: 30px;
+    font-size: 22px;
+}
+
+.flex-column-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: left;
+}
+
+.flex-column-left > * {
+    margin-right: auto;
+}
+
+.flex-column-right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: right;
+}
+
+.flex-column-right > * {
+    margin-left: auto;
+}
+
+.content-inner {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.content-left {
     margin: auto;
+    margin-left: 0px;
+}
+
+.content-right {
+    margin: auto;
+    margin-left: 20px;
     margin-right: 0px;
 }
 
-.website-demo {
+.main-content {
     width: 45vw;
     height: 85vh;
+    margin: auto;
+}
+
+/* INTRO */
+
+/* DEVLOG-1 */
+
+/* CREW */
+
+.crew-card {
+    margin: 20px auto;
+    margin-left: 0px;
 }
