--- a/presentation/style/presentation.css
+++ b/presentation/style/presentation.css
@@ -116,6 +116,7 @@ body {
     font-size: 18px;
 
     padding: 5px 25px;
+    margin-top: 30px;
     margin-bottom: 33.5px;
 
     transition: linear 0.3s;
@@ -132,7 +133,7 @@ body {
 
 .content-text {
     margin-top: 5px;
-    margin-bottom: 30px;
+    margin-bottom: 2px;
     font-size: 22px;
 }
 
@@ -194,6 +195,14 @@ body {
     justify-content: center;
 
     font-size: 0.3vh;
+
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+@media (height > 1440px) {
+    .repo-filetree {
+        font-size: 15px;
+    }
 }
 
 /* CREW */
