--- a/pages/templates/writepost.html
+++ b/pages/templates/writepost.html
@@ -11,7 +11,7 @@
         <div class="write-post-file-name-list" id="fileNameList">
 
         </div>
-        <button class="write-post-button" id="write-post-button" onclick="writePost();loadNewsfeed()">작성하기</button>
+        <button class="write-post-button" id="write-post-button" onclick="writePost();checkHash('#loadNewsfeed')">작성하기</button>
 
     </div>
 
