--- a/pages/templates/title.html
+++ b/pages/templates/title.html
@@ -7,7 +7,7 @@
         <img onclick="checkHash('#loadMyProfile');loadMyProfile()" src="img/my-profile.png">
         <img onclick="logOut()" src="img/logout.png">
     </div>
-    <div class="title-box" onclick="loadNewsfeedFromTitleClick()">
+    <div class="title-box" onclick="checkHash('#loadNewsfeed')">
         <img class="title-img" src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fm3RNd%2FbtrRuV0OPUU%2F1AuohJuprY9hKbUcTIvmU1%2Fimg.png" width="150">
         <br><br>
         <h1 class="title-text"><b>Welcome To Our Dream!</b></h1>
