--- a/pages/templates/aespa.html
+++ b/pages/templates/aespa.html
@@ -36,9 +36,9 @@
         <span></span>
         <img id="aespaPic" src="https://thumbs.gfycat.com/CheapTiredGrebe-size_restricted.gif" style="width: 1200px; height: 350px;"/>
         
-    </div>
+    </div  >
     <br> <br> <br> <br> <br> <br> <br> <br> <br>
-    <div>
+    <div id="team_album">
         <앨범소개><br>
         Black Mamba 발매일 2020.11.17 <br>
         Forever (약속)발매일 2021.02.05 <br>
@@ -50,7 +50,21 @@
         iScreaM Vol.18 : Girls Remixes 아티스트 aespa, BRLLNT, Minit 발매일 2022.10.21<br>
 
      </div>
-     <div>
-          2명의 한국인과 일본인, 중국인으로 구성되어 있다.
+     <div  id="team_intro">
+          <!-- 2명의 한국인과 일본인, 중국인으로 구성되어 있다. <br><br> -->
+          <img id="aespaPic2" src="https://img1.daumcdn.net/thumb/R1280x0.fjpg/?fname=http://t1.daumcdn.net/brunch/service/user/apk3/image/z0ytd9_yzD2QU6sXhSGGFFFzr5s" style="width: 1200px; height: 350px;" ><br><br>
+
+            <span id="world_view">aespa 세계관</span><br>
+
+            자신의 또 다른 자아인 아바타를 만나 새로운 세계를 경험하게 된다는 세계관을 바탕으로 활동한다.<br><br>
+            SM엔터테인먼트 총괄 프로듀서 이수만은 미래 세상은 셀러브리티와 A.I.의 세상이 될 것이라며, 앞서 미래 엔터테인먼트 세상의 핵심 가치이자 비전으로 SMCU(SM Culture Universe)를 언급한 바 있는데, 미래 엔터테인먼트의 시작을 열게 될 SMCU 첫 번째 프로젝트로 걸그룹 aespa를 선보인다고 소개했다. aespa의 그룹 콘셉트에 대한 구상을 2015년부터 했다고 한다. 읽는 건 에-에스파가 아닌 아이-에스파로 읽는다.<br><br>
+            aespa의 스토리텔링에 대해서는 '현실 세계'에 존재하는 아티스트 멤버와 '가상 세계'에 존재하는 아바타 멤버가 현실과 가상의 중간 세계인 디지털 세계를 통해 소통하고 교감하며 성장해가는 스토리텔링을 가지고 있다. ‘현실 세계’의 멤버들과 ‘가상 세계’의 아바타 멤버들, 그들의 곁에서 서포트해주고 조력자 역할을 하는 ‘가상세계’ 속의 신비로운 존재들이 그룹의 멤버로서, 현실에서 함께 활동할 수 있는 획기적인 아이덴티티를 가지는 신개념 그룹이다. ‘현실 세계’ 멤버들과 ‘가상 세계’ 멤버들이 서로 다른 유기체로서 AI 브레인을 가지고 있기 때문에 서로 대화를 하고, 조력도 해 주고, 친구가 되어 주고, 각자 세계의 정보를 나누고, 각자의 세계를 오가는 등 새로운 개념의 스토리텔링을 선보일 예정이라고 한다.
+            ‘현실 세계’의 멤버들과 똑같은, 우리가 모르는 '버추얼 세계'에서 스스로 아바타가 탄생되는데, ‘현실 세계’의 멤버들이 처음으로 아바타를 만나게 되는 세계관을 오픈할 것이다. 에스파는 데뷔 후 ‘현실 세계’의 멤버들은 지금까지의 SM 아티스트처럼 오프라인에서 활동을 펼치며, 그와 동시에 새롭게 세상에 알려지고, 밝혀지게 되는 ‘가상 세계’와 그곳에 사는 아바타 멤버들도 다양한 콘텐츠와 프로모션으로 활동하고 그들을 보게 될 것이며, 즉 한 그룹 안에서 온·오프라인으로 동시에 그러나 각각 서로 다른 방식으로, 때로는 ‘현실 세계’와 ‘가상 세계’의 컬래버레이션을 선보일 것이라고 언급하였다.<br><br>
+            aespa는 현실 세계에 존재하는 aespa 멤버들과 가상 세계에 존재하는 아바타 ‘æ[읽는법]’가 SYNK를 통해 소통하고 교감하는 이야기를 가지고 있다. æ는 인간의 데이터를 기반으로 만들어진 가상 세계 속 또 다른 자아로, 자신의 방식대로 생각하고 살아가는 존재이다. 그들은 ‘KWANGYA(광야)’ 속 FLAT(플랫)에 살고 있다. 이곳 KWANGYA(광야)에서는 베스트프렌드를 'MY(마이)'라고 부른다.[2] nævis(나이비스)는 aespa와 가상 세계 속 아바타를 서포트해 주는 든든한 조력자이자 안내자 역할을 하는 가상 세계 속 신비로운 존재이다. aespa 실제 멤버와 아바타가 연결된 상태를 SYNK(싱크)라고 하며 SYNK는 텍스트>음성 순으로 발전하다 더 지속되면 대면인 REKALL(리콜)이 일어나 아바타들이 현실 세계로 오게 된다.
+            aespa의 멤버들은 æ와 거의 최초로 SYNK되어 æ를 REKALL하여 만난 것 으로 보이며. 닝닝은 권선징악 해커단체인 ED에 소속되어 있는 것으로 보인다.
+            멤버들의 상징 엠블럼이 있다. 카리나는 하트(❤️), 지젤은 달(🌙), 윈터는 별(⭐), 닝닝은 나비(🦋)이며 개인 SYNK 영상들에서 공개되었다. Spotify에 공개된 음성 메시지[3] 또한 엠블럼을 넣어 인사하였다.<br>
+     </div>
+          
+        
      </div>
 </div>
