--- a/pages/templates/giselle.html
+++ b/pages/templates/giselle.html
@@ -1,7 +1,7 @@
-<button onclick="aespaintro()">소개 페이지</button><br>
+<button onclick="aespaintro()">뒤로가기</button><br>
 
-<p id="giselle_profile">지젤 프로필</p><br>
-<img src="https://blog.kakaocdn.net/dn/6qRcl/btqS1WETjr3/jkBGlvIRuqoxybXEfGux7k/img.jpg"><br>
+<p id="giselle_profile"><지젤 프로필></p><br>
+<img id="giselle_pic" src="https://blog.kakaocdn.net/dn/6qRcl/btqS1WETjr3/jkBGlvIRuqoxybXEfGux7k/img.jpg"><br>
 <p id="giselle_name">본명 우치나카 애리(한국명:김애리)</p><br>
 <p id="giselle_birth">생년월일: 2000년 10월 30일</p><br>
 <p id="giselle_role">역할: 메인래퍼, 서브보컬</p><br>
