--- a/pages/templates/karina.html
+++ b/pages/templates/karina.html
@@ -1,8 +1,8 @@
-<button onclick="aespaintro()">소개 페이지</button><br>
+<button onclick="aespaintro()">뒤로가기</button><br>
 
 <div>
-    <p id="karina_profile">카리나 프로필</p><br>
-    <img src="http://img.etoday.co.kr/pto_db/2020/10/700/20201028004128_1530793_1200_800.jpg"><br>
+    <p id="karina_profile"><카리나 프로필></p><br>
+    <img id="karina_pic" src="http://img.etoday.co.kr/pto_db/2020/10/700/20201028004128_1530793_1200_800.jpg"><br>
     <p id="karina_name">본명 유지민</p><br>
     <p id="karina_birth">생년월일: 2000년 4월 11일</p><br>
     <p id="karina_role">역할: 에스파리더, 메인댄서, 서브보컬, 서브래퍼</p><br>
