--- a/style/aespa.css
+++ b/style/aespa.css
@@ -161,3 +161,21 @@ body {
       color: #146C80;
     }
   }
+
+  #team_album{
+    font-size: 25px;
+  }
+
+  #team_intro{
+    font-size: 20px;
+  }
+
+  #world_view{
+    font-size: 40px;
+
+  }
+
+
+
+
+  
