--- a/style/giselle.css
+++ b/style/giselle.css
@@ -1,8 +1,9 @@
-#winter_pic{
+#gisselle{
     width: 600px;
     height: 400px;
+
 }
 
-#winter_profile{
+#giselle_profile{
     font-size: 20px;
 }
