--- a/pages/templates/niningnining.html
+++ b/pages/templates/niningnining.html
@@ -1,7 +1,7 @@
-<button onclick="aespaintro()">소개 페이지</button><br>
-<p id="winter_profile">닝닝 프로필</p><br>
-<img src="https://image.kmib.co.kr/online_image/2020/1029/611816110015161195_1.jpg"><br>
-<p id="winter_name">본명 닝이쥐</p><br>
-<p id="winter_name">생년월일: 2002년 10월 23일</p><br>
-<p id="winter_name">역할: 메인보컬</p><br>
-<p id="winter_name">혈액형: o형</p><br>
+<button onclick="aespaintro()">뒤로가기</button><br>
+<p id="niningnining_profile"><닝닝 프로필></p><br>
+<img id="niningnining_pic" src="https://image.kmib.co.kr/online_image/2020/1029/611816110015161195_1.jpg"><br>
+<p id="niningnining_name">본명 닝이쥐</p><br>
+<p id="niningnining_birth">생년월일: 2002년 10월 23일</p><br>
+<p id="niningnining_name">역할: 메인보컬</p><br>
+<p id="niningnining_name">혈액형: o형</p><br>
