타이틀에 버튼추가

--- a/pages/templates/title.html
+++ b/pages/templates/title.html
@@ -1,5 +1,7 @@
 <div class="header-wrap">
     <div class="profile-menu">
+
+        <button onclick="aespaintro()">팀 소개</button>
         <button onclick="checkHash('#loadWritePost');">글쓰기</button>
         <button onclick="checkHash('#loadMyProfile');">내 프로필</button>
         <button onclick="logOut()">로그아웃</button>
